2004-03-10 Bernhard Held <bernhard AT bernhardheld.de>
	
	* src/SDCCast.c (decorateType): fixed with bug and promotion in
	arithmetic optimizations, added debug output

2004-03-09 Bernhard Held <bernhard AT bernhardheld.de>

	* device/lib/time.c (mktime): fixed bug reported by Bert Thomas
	* sdcc.spec: updated and split sdcc into 3 rpms
	* src/SDCCast.c (decorateType): &|^ don't need addCast(); addCast() is
	needed for literals of LEFT_OP and '+'
	* src/SDCCicode.c (geniCodeLogic): I must have been braindead when I
	introduced RESULT_TYPE_NOPROM
	(geniCodeMultiply): fixed logic for decision if mul is optimized to 
	left shift
	* src/SDCCsymt.c (computeType): op is int; added RESULT_TYPE_OTHER;
	limited promotion to int only for '*'
	* src/SDCCsymt.h (computeType): op is int, removed RESULT_TYPE_NOPROM

2004-03-09 Hans Dorn <hjdorn AT users.sourceforge.net>

	* src/pic16/gen.c (genSkip),
	(genc16bit2lit), (gencjneshort): commented out
	(is_LitOp): new helper function, checks operand type
	(genCmpEq): rewritten

2004-03-08 Bernhard Held <bernhard AT bernhardheld.de>

	* support/regression/tests/bug-908454.c: added

2004-03-07 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCast.c (addCast): fixed bug #908454 by promoting bits to char
	* src/SDCCicode.c (usualBinaryConversions): op needs int type
	(geniCodeCast): cosmetic, don't preserve bit storage class
	(geniCodeLeftShift): added promotion
	(geniCodeLogic): fixed regression
	* src/SDCCsymt.c (computeTypeOr): accept bits too
	(compareType): 2nd part of fix for bug #908454, needed for bitfields

2004-03-07  Borut Razem <borut.razem AT siol.net>

	* support/Util/findme.c: alloca() replaced with malloc()/free() pair

2004-03-06 Vangelis Rokas <vrokas AT otenet.gr>

	* src/pic16/ralloc.c (pic16_genPackRegisters): reverted to old
	version of pic16_genPackRegisters which does not check if ic is a
	CAST operator,
	* src/pic16/gen.c (ifxForOp): disabled new and untested code in